add examples and update constraints